# test-windows

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-windows.yaml
config/: qt.cmake
docs/: README.md
qml/: Main.qml  TestHeadless.qml  qml.qrc
src/: dummy_codeql.cpp  hello_ios.cpp  main.cpp
tests/cpp-tests/: CMakeLists.txt  tst_cpptest.cpp
tests/qml-tests/: CMakeLists.txt  main.cpp  qmltests.conf  setup.cpp  setup.h  tst_test1.qml
tests/qt-tests/: CMakeLists.txt  tst_test1.cpp
